dropdown: long text overflow fix

--- a/src/browser/scss/widgets/_switch.scss
+++ b/src/browser/scss/widgets/_switch.scss
@@ -185,7 +185,8 @@
             display: flex;
             vertical-align: middle;
             background:transparent;
-            padding: 0 20rem 0 10rem;
+            padding: 0 30rem 0 10rem;
+            max-width: 100%;
             -webkit-appearance:none;
             -moz-appearance:none;
             appearance:none;
